--- a/app/src/main/res/layout/activity_expanded_day.xml
+++ b/app/src/main/res/layout/activity_expanded_day.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Calendar"
-    android:background="@android:color/holo_blue_bright"
+    android:background="@android:color/white"
     android:orientation="vertical"
     >
 
@@ -19,13 +19,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Date:"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:textSize="26sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
