--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="bmes_color">#FF3f7ec6</color>
+    <color name="bmes_color_light">#FF79bacf</color>
     <color name="black">#FF000000</color>
 <!--    <color name="white">#FF3f7ec6</color>-->
     <color name="white">#FFFFFFFF</color>
